ダウンロードを実装。

--- a/TestResumeDownload/TestResumeDownload.csproj
+++ b/TestResumeDownload/TestResumeDownload.csproj
@@ -44,4 +44,12 @@
 	<PropertyGroup Condition="'$(DisableHasPackageAndPublishMenuAddedByProject)'!='true' and '$(EnableMsixTooling)'=='true'">
 		<HasPackageAndPublishMenu>true</HasPackageAndPublishMenu>
 	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+	  <NoWarn>IDE0007</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+	  <NoWarn>IDE0007</NoWarn>
+	</PropertyGroup>
 </Project>
